--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -11,3 +11,18 @@ jobs:
         run: |
           node -v
           npm -v
+
+  parallel-job:
+    runs-on: macos-latest
+    steps:
+      - name: show software version
+        run: sw_vers
+
+  dependant-job:
+    runs-on: windows-latest
+    needs: shell-cmd-job
+    steps:
+      - name: echo a string
+        run: Write-Output "Windows String"
+      - name: Error Step
+        run: exit 1  # 오류 테스트용 (원래는 정상적인 명령어를 사용해야 함)
