--- a/.github/workflows/home-first-workflow.yaml
+++ b/.github/workflows/home-first-workflow.yaml
@@ -6,10 +6,10 @@ on:
   
 jobs:
   check-python:
-    runs-on:ubuntu-latest
+    runs-on: ubuntu-latest  # ✅ 공백 추가 (올바른 문법)
     steps:
-      - name: Check Repository
-        uses: action/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v4  # ✅ 'actions'로 수정
 
       - name: Show Python and pip version
         run: |
